# slicermorph-gpa

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/slicermorph_gpa/: __init__.py  gpa.py  io.py  pca.py
tests/: __init__.py  test_gpa.py  test_io.py  test_pca.py
tests/fixtures/: specimen_01.fcsv  specimen_02.fcsv  specimen_03.fcsv
